src/wrapper/torch_api_generated.h

void atg_baddbmm_(tensor *, tensor self, tensor batch1, tensor batch2);
void atg_baddbmm_out(tensor *, tensor result, tensor self, tensor batch1, tensor batch2);
void atg_bartlett_window1(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_bartlett_window2(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_batch_norm(tensor *, tensor input, tensor weight, tensor bias, tensor running_mean, tensor running_var, int training, double momentum, double eps, int cudnn_enabled);
void atg_bernoulli1(tensor *, tensor self);
void atg_bernoulli2(tensor *, tensor self, double p);
void atg_bernoulli_(tensor *, tensor self, tensor p);
void atg_bernoulli_1(tensor *, tensor self, double p);
void atg_bernoulli_out(tensor *, tensor result, tensor self);
void atg_bilinear(tensor *, tensor input1, tensor input2, tensor weight, tensor bias);
void atg_binary_cross_entropy(tensor *, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_binary_cross_entropy_backward(tensor *, tensor grad_output, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_binary_cross_entropy_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_binary_cross_entropy_forward(tensor *, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_binary_cross_entropy_forward_out(tensor *, tensor output, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_binary_cross_entropy_out(tensor *, tensor output, tensor self, tensor target, tensor weight, int64_t reduction);
void atg_blackman_window1(tensor *, int64_t window_length, int options_kind, int options_device);
void atg_blackman_window2(tensor *, int64_t window_length, int periodic, int options_kind, int options_device);
void atg_bmm(tensor *, tensor self, tensor mat2);
void atg_bmm_out(tensor *, tensor result, tensor self, tensor mat2);
void atg_cat(tensor *, tensor *tensors_data, int tensors_len, int64_t dim);
void atg_cat_out(tensor *, tensor result, tensor *tensors_data, int tensors_len, int64_t dim);
void atg_cauchy_(tensor *, tensor self, double median, double sigma);
void atg_ceil(tensor *, tensor self);
void atg_ceil_(tensor *, tensor self);
void atg_ceil_out(tensor *, tensor result, tensor self);
void atg_celu(tensor *, tensor self);
void atg_celu_(tensor *, tensor self);
void atg_clamp(tensor *, tensor self, scalar min, scalar max);
void atg_clamp_(tensor *, tensor self, scalar min, scalar max);
void atg_clamp_max(tensor *, tensor self, scalar max);
void atg_clamp_max_(tensor *, tensor self, scalar max);
void atg_clamp_max_out(tensor *, tensor result, tensor self, scalar max);
void atg_clamp_min(tensor *, tensor self, scalar min);
void atg_clamp_min_(tensor *, tensor self, scalar min);
void atg_clamp_min_out(tensor *, tensor result, tensor self, scalar min);
void atg_clamp_out(tensor *, tensor result, tensor self, scalar min, scalar max);
void atg_clone(tensor *, tensor self);
void atg_coalesce(tensor *, tensor self);
void atg_contiguous(tensor *, tensor self);
void atg_conv1d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int64_t groups);
void atg_conv2d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int64_t groups);
void atg_conv3d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int64_t groups);
void atg_conv_tbc(tensor *, tensor self, tensor weight, tensor bias, int64_t pad);
void atg_conv_tbc_backward(tensor *, tensor self, tensor input, tensor weight, tensor bias, int64_t pad);
void atg_conv_transpose1d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *output_padding_data, int output_padding_len, int64_t groups, long int *dilation_data, int dilation_len);
void atg_conv_transpose2d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *output_padding_data, int output_padding_len, int64_t groups, long int *dilation_data, int dilation_len);
void atg_conv_transpose3d(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *output_padding_data, int output_padding_len, int64_t groups, long int *dilation_data, int dilation_len);
void atg_convolution(tensor *, tensor input, tensor weight, tensor bias, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int transposed, long int *output_padding_data, int output_padding_len, int64_t groups);
void atg_copy_sparse_to_sparse_(tensor *, tensor self, tensor src, int non_blocking);
void atg_cos(tensor *, tensor self);
void atg_cos_(tensor *, tensor self);
void atg_cos_out(tensor *, tensor result, tensor self);
void atg_cosh(tensor *, tensor self);
void atg_cosh_(tensor *, tensor self);
void atg_cosh_out(tensor *, tensor result, tensor self);
void atg_cosine_embedding_loss(tensor *, tensor input1, tensor input2, tensor target, double margin, int64_t reduction);
void atg_cross(tensor *, tensor self, tensor other, int64_t dim);
void atg_cross_out(tensor *, tensor result, tensor self, tensor other, int64_t dim);
void atg_ctc_loss1(tensor *, tensor log_probs, tensor targets, long int *input_lengths_data, int input_lengths_len, long int *target_lengths_data, int target_lengths_len, int64_t blank, int64_t reduction);
void atg_ctc_loss2(tensor *, tensor log_probs, tensor targets, tensor input_lengths, tensor target_lengths, int64_t blank, int64_t reduction);
void atg_cudnn_affine_grid_generator(tensor *, tensor theta, int64_t N, int64_t C, int64_t H, int64_t W);
void atg_cudnn_affine_grid_generator_backward(tensor *, tensor grad, int64_t N, int64_t C, int64_t H, int64_t W);
void atg_cudnn_batch_norm(tensor *, tensor input, tensor weight, tensor bias, tensor running_mean, tensor running_var, int training, double exponential_average_factor, double epsilon);
void atg_cudnn_batch_norm_backward(tensor *, tensor input, tensor grad_output, tensor weight, tensor running_mean, tensor running_var, tensor save_mean, tensor save_var, double epsilon);
void atg_cudnn_convolution(tensor *, tensor self, tensor weight, tensor bias, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_backward_bias(tensor *, tensor grad_output);
void atg_cudnn_convolution_backward_input(tensor *, long int *self_size_data, int self_size_len, tensor grad_output, tensor weight, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_backward_weight(tensor *, long int *weight_size_data, int weight_size_len, tensor grad_output, tensor self, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_transpose(tensor *, tensor self, tensor weight, tensor bias, long int *padding_data, int padding_len, long int *output_padding_data, int output_padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_transpose_backward_bias(tensor *, tensor grad_output);
void atg_cudnn_convolution_transpose_backward_input(tensor *, tensor grad_output, tensor weight, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_convolution_transpose_backward_weight(tensor *, long int *weight_size_data, int weight_size_len, tensor grad_output, tensor self, long int *padding_data, int padding_len, long int *stride_data, int stride_len, long int *dilation_data, int dilation_len, int64_t groups, int benchmark, int deterministic);
void atg_cudnn_grid_sampler(tensor *, tensor self, tensor grid);
void atg_cudnn_grid_sampler_backward(tensor *, tensor self, tensor grid, tensor grad_output);
void atg_cumprod1(tensor *, tensor self, int64_t dim, int dtype);
void atg_cumprod2(tensor *, tensor self, int64_t dim);
void atg_cumprod_out1(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_cumprod_out2(tensor *, tensor result, tensor self, int64_t dim);
void atg_cumsum1(tensor *, tensor self, int64_t dim, int dtype);
void atg_cumsum2(tensor *, tensor self, int64_t dim);
void atg_cumsum_out1(tensor *, tensor result, tensor self, int64_t dim, int dtype);
void atg_cumsum_out2(tensor *, tensor result, tensor self, int64_t dim);
void atg_det(tensor *, tensor self);
void atg_detach(tensor *, tensor self);
void atg_detach_(tensor *, tensor self);
void atg_diag(tensor *, tensor self, int64_t diagonal);
void atg_diag_out(tensor *, tensor result, tensor self, int64_t diagonal);
void atg_diagflat(tensor *, tensor self, int64_t offset);
void atg_diagonal(tensor *, tensor self, int64_t offset, int64_t dim1, int64_t dim2);
void atg_digamma(tensor *, tensor self);
void atg_digamma_(tensor *, tensor self);
void atg_digamma_out(tensor *, tensor result, tensor self);
void atg_div(tensor *, tensor self, tensor other);
void atg_div1(tensor *, tensor self, scalar other);
void atg_div_(tensor *, tensor self, tensor other);
void atg_div_1(tensor *, tensor self, scalar other);
void atg_div_out(tensor *, tensor result, tensor self, tensor other);
void atg_dot(tensor *, tensor self, tensor tensor);