src/stubs/torch_bindings_generated.ml


  let baddbmm_ =
    foreign "atg_baddbmm_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let baddbmm_out =
    foreign "atg_baddbmm_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let bartlett_window1 =
    foreign "atg_bartlett_window1"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let bartlett_window2 =
    foreign "atg_bartlett_window2"
    (ptr t @-> int64_t @-> int @-> int @-> int @-> returning void)

  let batch_norm =
    foreign "atg_batch_norm"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int @-> double @-> double @-> int @-> returning void)

  let bernoulli1 =
    foreign "atg_bernoulli1"
    (ptr t @-> t @-> returning void)

  let bernoulli2 =
    foreign "atg_bernoulli2"
    (ptr t @-> t @-> double @-> returning void)

  let bernoulli_ =
    foreign "atg_bernoulli_"
    (ptr t @-> t @-> t @-> returning void)

  let bernoulli_1 =
    foreign "atg_bernoulli_1"
    (ptr t @-> t @-> double @-> returning void)

  let bernoulli_out =
    foreign "atg_bernoulli_out"
    (ptr t @-> t @-> t @-> returning void)

  let bilinear =
    foreign "atg_bilinear"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let binary_cross_entropy =
    foreign "atg_binary_cross_entropy"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let binary_cross_entropy_backward =
    foreign "atg_binary_cross_entropy_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let binary_cross_entropy_backward_out =
    foreign "atg_binary_cross_entropy_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let binary_cross_entropy_forward =
    foreign "atg_binary_cross_entropy_forward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let binary_cross_entropy_forward_out =
    foreign "atg_binary_cross_entropy_forward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let binary_cross_entropy_out =
    foreign "atg_binary_cross_entropy_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let blackman_window1 =
    foreign "atg_blackman_window1"
    (ptr t @-> int64_t @-> int @-> int @-> returning void)

  let blackman_window2 =
    foreign "atg_blackman_window2"
    (ptr t @-> int64_t @-> int @-> int @-> int @-> returning void)

  let bmm =
    foreign "atg_bmm"
    (ptr t @-> t @-> t @-> returning void)

  let bmm_out =
    foreign "atg_bmm_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let cat =
    foreign "atg_cat"
    (ptr t @-> ptr t @-> int @-> int64_t @-> returning void)

  let cat_out =
    foreign "atg_cat_out"
    (ptr t @-> t @-> ptr t @-> int @-> int64_t @-> returning void)

  let cauchy_ =
    foreign "atg_cauchy_"
    (ptr t @-> t @-> double @-> double @-> returning void)

  let ceil =
    foreign "atg_ceil"
    (ptr t @-> t @-> returning void)

  let ceil_ =
    foreign "atg_ceil_"
    (ptr t @-> t @-> returning void)

  let ceil_out =
    foreign "atg_ceil_out"
    (ptr t @-> t @-> t @-> returning void)

  let celu =
    foreign "atg_celu"
    (ptr t @-> t @-> returning void)

  let celu_ =
    foreign "atg_celu_"
    (ptr t @-> t @-> returning void)

  let clamp =
    foreign "atg_clamp"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let clamp_ =
    foreign "atg_clamp_"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let clamp_max =
    foreign "atg_clamp_max"
    (ptr t @-> t @-> scalar @-> returning void)

  let clamp_max_ =
    foreign "atg_clamp_max_"
    (ptr t @-> t @-> scalar @-> returning void)

  let clamp_max_out =
    foreign "atg_clamp_max_out"
    (ptr t @-> t @-> t @-> scalar @-> returning void)

  let clamp_min =
    foreign "atg_clamp_min"
    (ptr t @-> t @-> scalar @-> returning void)

  let clamp_min_ =
    foreign "atg_clamp_min_"
    (ptr t @-> t @-> scalar @-> returning void)

  let clamp_min_out =
    foreign "atg_clamp_min_out"
    (ptr t @-> t @-> t @-> scalar @-> returning void)

  let clamp_out =
    foreign "atg_clamp_out"
    (ptr t @-> t @-> t @-> scalar @-> scalar @-> returning void)

  let clone =
    foreign "atg_clone"
    (ptr t @-> t @-> returning void)

  let coalesce =
    foreign "atg_coalesce"
    (ptr t @-> t @-> returning void)

  let contiguous =
    foreign "atg_contiguous"
    (ptr t @-> t @-> returning void)

  let conv1d =
    foreign "atg_conv1d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let conv2d =
    foreign "atg_conv2d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let conv3d =
    foreign "atg_conv3d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let conv_tbc =
    foreign "atg_conv_tbc"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let conv_tbc_backward =
    foreign "atg_conv_tbc_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let conv_transpose1d =
    foreign "atg_conv_transpose1d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> ptr long @-> int @-> returning void)

  let conv_transpose2d =
    foreign "atg_conv_transpose2d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> ptr long @-> int @-> returning void)

  let conv_transpose3d =
    foreign "atg_conv_transpose3d"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> ptr long @-> int @-> returning void)

  let convolution =
    foreign "atg_convolution"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> ptr long @-> int @-> int64_t @-> returning void)

  let copy_sparse_to_sparse_ =
    foreign "atg_copy_sparse_to_sparse_"
    (ptr t @-> t @-> t @-> int @-> returning void)

  let cos =
    foreign "atg_cos"
    (ptr t @-> t @-> returning void)

  let cos_ =
    foreign "atg_cos_"
    (ptr t @-> t @-> returning void)

  let cos_out =
    foreign "atg_cos_out"
    (ptr t @-> t @-> t @-> returning void)

  let cosh =
    foreign "atg_cosh"
    (ptr t @-> t @-> returning void)

  let cosh_ =
    foreign "atg_cosh_"
    (ptr t @-> t @-> returning void)

  let cosh_out =
    foreign "atg_cosh_out"
    (ptr t @-> t @-> t @-> returning void)

  let cosine_embedding_loss =
    foreign "atg_cosine_embedding_loss"
    (ptr t @-> t @-> t @-> t @-> double @-> int64_t @-> returning void)

  let cross =
    foreign "atg_cross"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let cross_out =
    foreign "atg_cross_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let ctc_loss1 =
    foreign "atg_ctc_loss1"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int64_t @-> returning void)

  let ctc_loss2 =
    foreign "atg_ctc_loss2"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> returning void)

  let cudnn_affine_grid_generator =
    foreign "atg_cudnn_affine_grid_generator"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let cudnn_affine_grid_generator_backward =
    foreign "atg_cudnn_affine_grid_generator_backward"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let cudnn_batch_norm =
    foreign "atg_cudnn_batch_norm"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int @-> double @-> double @-> returning void)

  let cudnn_batch_norm_backward =
    foreign "atg_cudnn_batch_norm_backward"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> t @-> t @-> double @-> returning void)

  let cudnn_convolution =
    foreign "atg_cudnn_convolution"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_convolution_backward_bias =
    foreign "atg_cudnn_convolution_backward_bias"
    (ptr t @-> t @-> returning void)

  let cudnn_convolution_backward_input =
    foreign "atg_cudnn_convolution_backward_input"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_convolution_backward_weight =
    foreign "atg_cudnn_convolution_backward_weight"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_convolution_transpose =
    foreign "atg_cudnn_convolution_transpose"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_convolution_transpose_backward_bias =
    foreign "atg_cudnn_convolution_transpose_backward_bias"
    (ptr t @-> t @-> returning void)

  let cudnn_convolution_transpose_backward_input =
    foreign "atg_cudnn_convolution_transpose_backward_input"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_convolution_transpose_backward_weight =
    foreign "atg_cudnn_convolution_transpose_backward_weight"
    (ptr t @-> ptr long @-> int @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int64_t @-> int @-> int @-> returning void)

  let cudnn_grid_sampler =
    foreign "atg_cudnn_grid_sampler"
    (ptr t @-> t @-> t @-> returning void)

  let cudnn_grid_sampler_backward =
    foreign "atg_cudnn_grid_sampler_backward"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let cumprod1 =
    foreign "atg_cumprod1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let cumprod2 =
    foreign "atg_cumprod2"
    (ptr t @-> t @-> int64_t @-> returning void)

  let cumprod_out1 =
    foreign "atg_cumprod_out1"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let cumprod_out2 =
    foreign "atg_cumprod_out2"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let cumsum1 =
    foreign "atg_cumsum1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let cumsum2 =
    foreign "atg_cumsum2"
    (ptr t @-> t @-> int64_t @-> returning void)

  let cumsum_out1 =
    foreign "atg_cumsum_out1"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let cumsum_out2 =
    foreign "atg_cumsum_out2"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let det =
    foreign "atg_det"
    (ptr t @-> t @-> returning void)

  let detach =
    foreign "atg_detach"
    (ptr t @-> t @-> returning void)

  let detach_ =
    foreign "atg_detach_"
    (ptr t @-> t @-> returning void)

  let diag =
    foreign "atg_diag"
    (ptr t @-> t @-> int64_t @-> returning void)

  let diag_out =
    foreign "atg_diag_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let diagflat =
    foreign "atg_diagflat"
    (ptr t @-> t @-> int64_t @-> returning void)

  let diagonal =
    foreign "atg_diagonal"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int64_t @-> returning void)

  let digamma =
    foreign "atg_digamma"
    (ptr t @-> t @-> returning void)

  let digamma_ =
    foreign "atg_digamma_"
    (ptr t @-> t @-> returning void)

  let digamma_out =
    foreign "atg_digamma_out"
    (ptr t @-> t @-> t @-> returning void)

  let div =
    foreign "atg_div"
    (ptr t @-> t @-> t @-> returning void)

  let div1 =
    foreign "atg_div1"
    (ptr t @-> t @-> scalar @-> returning void)

  let div_ =
    foreign "atg_div_"
    (ptr t @-> t @-> t @-> returning void)

  let div_1 =
    foreign "atg_div_1"
    (ptr t @-> t @-> scalar @-> returning void)

  let div_out =
    foreign "atg_div_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let dot =
    foreign "atg_dot"
    (ptr t @-> t @-> t @-> returning void)
